--- a/configuracion.html
+++ b/configuracion.html
@@ -34,6 +34,13 @@
 </head>
 <body>
 <div class="container">
+	<p></p>
+	<div class="row">
+		<div class="col-xs-11"></div>
+		<div class="col-xs-1">
+			<button type="button" class="btn btn-lg" id="btn_salir">salir</button>
+		</div>
+	</div>
 	<div class="row">
 		<h2 id="texto_cabeza" class="text-center">Por favor selecciona tu configuracion y da click en guardar</h2>
 	</div>
@@ -43,7 +50,7 @@
 		  <label id="text-ingresa-datos"> Compartir Ubicacion</label>
 		</div>
 		<div class="col-xs-2">
-			<input type="checkbox" name="my-checkbox" id="1">
+			<input type="checkbox" data-toggle="toggle" id="1">
 		</div>
 	</div>
 	<p></p>
@@ -53,7 +60,7 @@
 		  <label id="text-ingresa-datos">Compartir Horario</label>
 		</div>
 		<div class="col-xs-2">
-			<input type="checkbox" name="my-checkbox" id="2">
+			<input type="checkbox" data-toggle="toggle" id="2">
 		</div>
 	</div>
 	<p></p>
@@ -63,7 +70,7 @@
 		  <label id="text-ingresa-datos">Compartir Profesor</label>
 		</div>
 		<div class="col-xs-2">
-			<input type="checkbox" name="my-checkbox" id="2">
+			<input type="checkbox" data-toggle="toggle" id="3">
 		</div>
 	</div>
 	<p></p>
@@ -73,47 +80,86 @@
 			<button type="button" class="btn btn-lg" id="btn_guardar">Guardar</button>
 		</div>
 	</div>
+	<p></p>
+	<div class="row">
+		<h2 id="texto_cabeza" class="text-center">Si deseas cambiar tu contraseña por favor da click en el boton cambiar contraseña</h2>
+	</div>
+	<div class="row">
+		<div class="col-xs-4"></div>
+		<div class="col-xs-4 text-center">
+			<button type="button" class="btn btn-lg" data-toggle="collapse" data-target="#cambiar_contra" id="btn_cambiar_contra">Cambiar contraseña</button>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-xs-2"></div>
+		<div class="col-xs-8">
+			<div id="cambiar_contra" class="collapse">
+				<div class="form-group">
+				    <label for="old_passw">Contraseña anterior</label>
+				    <input type="password" class="form-control" id="old_passw" placeholder="Contraseña anterior">
+				  </div>
+				  <div class="form-group">
+				    <label for="new_passw">Nueva contraseña</label>
+				    <input type="password" class="form-control" id="new_passw" placeholder="Nueva Contraseña">
+				  </div>
+				  <div class="form-group">
+				    <label for="new_passw_1">Repetir nueva contraseña</label>
+				    <input type="password" class="form-control" id="new_passw_1" placeholder="Nueva Contraseña">
+				  </div>
+				  <div class="row">
+					<div class="col-xs-10"></div>
+					<div class="col-xs-2">
+						<button type="button" class="btn btn-lg" id="btn_cambiar_con">Cambiar</button>
+					</div>
+				</div>
+  			</div>
+		</div>
+	</div>
 </div>
 </body>
 </html>
 <script>
 	$(document).ready(function(){
-		$("[name='my-checkbox']").bootstrapSwitch();
+		$('input[type=checkbox][data-toggle^=toggle]').bootstrapToggle();
 		var configuracion_persona=JSON.parse(localStorage.configuracion_persona);
 	    console.log(configuracion_persona[0]);
 	    console.log(configuracion_persona[0].COMPARTIR_UBICACION);
 	    console.log(configuracion_persona[0].COMPARTIR_HORARIO);
 	    console.log(configuracion_persona[0].COMPARTIR_PROFESOR);
-	    if(configuracion_persona[0].COMPARTIR_UBICACION=="1" || configuracion_persona[0].COMPARTIR_UBICACION==1){
-	    	$('#1').bootstrapSwitch('state', true);
+	    var comp_ubicacion=configuracion_persona[0].COMPARTIR_UBICACION;
+	    var comp_horario=configuracion_persona[0].COMPARTIR_HORARIO;
+	    var comp_profe=configuracion_persona[0].COMPARTIR_PROFESOR;
+
+	    if(comp_ubicacion=="1" || comp_ubicacion==1){
+	    	$('#1').bootstrapToggle('on');
 	    }else{
-	    	$('#1').bootstrapSwitch('state', false);
+	    	$('#1').bootstrapToggle('off')
 	    }
-	    if(configuracion_persona[0].COMPARTIR_HORARIO=="1" || configuracion_persona[0].COMPARTIR_HORARIO==1){
-	    	$('#2').bootstrapSwitch('state', true);
+	    if(comp_horario=="1" || comp_horario==1){
+	    	$('#2').bootstrapToggle('on');
 	    }else{
-	    	$('#2').bootstrapSwitch('state', false);
+	    	$('#2').bootstrapToggle('off');
 	    }
-	    if(configuracion_persona[0].COMPARTIR_PROFESOR=="1" || configuracion_persona[0].COMPARTIR_PROFESOR==1){
-	    	$('#3').bootstrapSwitch('state', true);
+	    if(comp_profe=="1" || comp_profe==1){
+	    	$('#3').bootstrapToggle('on');
 	    }else{
-	    	$('#3').bootstrapSwitch('state', false);
+	    	$('#3').bootstrapToggle('off');
 	    }
 		$('#btn_guardar').click(function() {
 			var compartir_ubicacion;
 			var compartir_horario;
 			var compartir_profesor;
-			if($('#1').bootstrapSwitch('state')) {
+			if($('#1').is(':checked')) {
             	compartir_ubicacion="1";
 	        } else {  
 	           	compartir_ubicacion="0"; 
 	        }
-	        if($('#2').bootstrapSwitch('state')) {
+	        if($('#2').is(':checked')) {
             	compartir_horario="1";
 	        } else {  
 	           	compartir_horario="0"; 
 	        } 
-	        if($('#3').bootstrapSwitch('state')) {
+	        if($('#3').is(':checked')) {
             	compartir_profesor="1";
 	        } else {  
 	           	compartir_profesor="0"; 
@@ -122,9 +168,8 @@
 	        console.log(datos_persona);
 	        var id=datos_persona[0].ID;
 	        var id_configuracion=compartir_ubicacion+compartir_horario+compartir_profesor;
-	        alert(id_configuracion);
 	        console.log(compartir_ubicacion);
-			console.log(compartir_ubicacion);
+			console.log(compartir_horario);
 			console.log(compartir_profesor);
 	        switch(id_configuracion){
 	        	case "000":
@@ -152,7 +197,6 @@
 	        		id_configuracion=1;
 	        	break;
 	        }
-	        alert(id_configuracion);
 	        $.ajax({
 				url: "http://siluaa.mybluemix.net/API/guardar_config.php",
 				method: 'GET',
@@ -161,12 +205,53 @@
 				mimeType: 'application/json'
 			}).done(function(json) {
 				if(json.result=="true"){
-					alert("exito");
-				   	window.location="log-in.html";
+					alert("Cambios realizados");
 				}else{
 				   	alert("Algo salió mal");
 				}
 			});
+		});
+		$('#btn_cambiar_con').click(function(){
+			if($('#old_passw').val()=="" || $('#old_passw').val()==null){
+				alert("Ingresa tu contraseña anterior");
+				return;
+			}else if($('#new_passw').val()=="" || $('#new_passw').val()==null){
+				alert("Ingresa la nueva contraseña");
+				return;
+			}else if($('#new_passw_1').val()=="" || $('#new_passw_1').val()==null){
+				alert("Ingresa la nueva contraseña nuevamente");
+				return;
+			}else{
+				var datos_persona=JSON.parse(localStorage.datos_persona);
+	        	var contra=datos_persona[0].CONTRA;
+	        	var id=datos_persona[0].ID;
+				if($('#old_passw').val()!=contra){
+					alert("La contraseña anterior no coincide");
+					return;
+				}else{
+					if($('#new_passw').val()!=$('#new_passw_1').val()){
+						alert("Las nuevas contraseñas no coinciden");
+						return;
+					}else{
+						$.ajax({        
+				          url: "http://siluaa.mybluemix.net/API/guardar_contra.php",
+				          method: 'GET',
+				          data: {id: id, contra: $('#new_passw').val()},
+				          dataType:'json',
+				          mimeType: 'application/json'
+				        }).done(function(json){
+					        if(json.result=="true"){
+					        	alert("Contraseña cambiada con éxito");
+					    	}else{
+					        	alert(json.mensaje);
+					        }
+				       	});
+					}
+				}
+			}
+		});
+		$('#btn_salir').click(function () {
+			window.location="log-in.html";
 		});
 	});
 </script>
