--- a/configuracion.html
+++ b/configuracion.html
@@ -38,7 +38,7 @@
 	<div class="row">
 		<div class="col-xs-11"></div>
 		<div class="col-xs-1">
-			<button type="button" class="btn btn-lg" id="btn_salir">salir</button>
+			<button type="button" class="btn btn-lg" id="btn_salir">Salir</button>
 		</div>
 	</div>
 	<div class="row">
@@ -95,8 +95,8 @@
 		<div class="col-xs-8">
 			<div id="cambiar_contra" class="collapse">
 				<div class="form-group">
-				    <label for="old_passw">Contraseña anterior</label>
-				    <input type="password" class="form-control" id="old_passw" placeholder="Contraseña anterior">
+				    <label for="old_passw">Contraseña actual</label>
+				    <input type="password" class="form-control" id="old_passw" placeholder="Contraseña actual">
 				  </div>
 				  <div class="form-group">
 				    <label for="new_passw">Nueva contraseña</label>
